--- a/index.html
+++ b/index.html
@@ -1,58 +1,102 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Date of Birth Calculator</title>
-  <script>
-    function calculateAge() {
-      const dob = new Date(document.getElementById("dob").value);
-      const today = new Date();if (isNaN(dob)) {
-    document.getElementById("result").textContent = "Please enter a valid date.";
-    return;
-  }
-
-  let ageYears = today.getFullYear() - dob.getFullYear();
-  let ageMonths = today.getMonth() - dob.getMonth();
-  let ageDays = today.getDate() - dob.getDate();
-
-  if (ageDays < 0) {
-    ageMonths--;
-    ageDays += new Date(today.getFullYear(), today.getMonth(), 0).getDate();
-  }
-
-  if (ageMonths < 0) {
-    ageYears--;
-    ageMonths += 12;
-  }
-
-  document.getElementById("result").textContent = `Age: ${ageYears} years, ${ageMonths} months, and ${ageDays} days.`;
-}
-
-  </script>
+  <meta name="description" content="A stylish tool to calculate your age from your date of birth." />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      background-color: #f5f5f5;
-      text-align: center;
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
     }
-    input, button {
-      margin: 1rem;
-      padding: 0.5rem;
+    body {
+      background: linear-gradient(to right, #6a11cb, #2575fc);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      padding: 2rem;
+    }
+    .container {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      width: 100%;
+      max-width: 400px;
+    }
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+    }
+    input[type="date"] {
+      padding: 0.6rem;
+      border-radius: 0.5rem;
+      border: none;
+      width: 100%;
+      margin-bottom: 1rem;
       font-size: 1rem;
+    }
+    button {
+      padding: 0.6rem 1.2rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      background-color: #fff;
+      color: #2575fc;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #e6e6e6;
     }
     #result {
       margin-top: 1.5rem;
-      font-weight: bold;
       font-size: 1.2rem;
+      color: #fff;
+      font-weight: 600;
     }
   </style>
+  <script>
+    function calculateAge() {
+      const dob = new Date(document.getElementById("dob").value);
+      const today = new Date();
+      if (isNaN(dob)) {
+        document.getElementById("result").textContent = "Please enter a valid date.";
+        return;
+      }
+      let ageYears = today.getFullYear() - dob.getFullYear();
+      let ageMonths = today.getMonth() - dob.getMonth();
+      let ageDays = today.getDate() - dob.getDate();
+      if (ageDays < 0) {
+        ageMonths--;
+        ageDays += new Date(today.getFullYear(), today.getMonth(), 0).getDate();
+      }
+      if (ageMonths < 0) {
+        ageYears--;
+        ageMonths += 12;
+      }
+      document.getElementById("result").textContent = `Your Age: ${ageYears} years, ${ageMonths} months, and ${ageDays} days.`;
+    }
+  </script>
 </head>
 <body>
-  <h1>Date of Birth Calculator</h1>
-  <label for="dob">Enter your Date of Birth:</label><br>
-  <input type="date" id="dob">
-  <button onclick="calculateAge()">Calculate Age</button>
-  <div id="result"></div>
+  <div class="container">
+    <h1>Age Calculator</h1>
+    <label for="dob">Select your Date of Birth</label><br /><br />
+    <input type="date" id="dob" />
+    <br />
+    <button onclick="calculateAge()">Calculate Age</button>
+    <div id="result"></div>
+  </div>
 </body>
 </html>
+
+
