--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
     <label for="dob">Select your Date of Birth</label><br /><br />
     <input type="date" id="dob" />
     <br />
+
+<!-- SEO-friendly description -->
+<p style="margin-top: 20px; color: white; font-size: 16px;">
+  Welcome to the free DOB Age Calculator! Instantly calculate your age in years, months, and days. This tool works on mobile and desktop. No signup needed — just select your birth date and see your exact age. Easy, fast, and accurate!
+</p>
     <button onclick="calculateAge()">Calculate Age</button>
     <div id="result"></div>
   </div>
